test/ui/tests/packages/erroneous-library/package.stderr
error[E032]: type mismatch
 --> ${TEST_FOLDER}/packages/erroneous-library/library.lushui:8:8
  |
8 | Clash: Type = Set.type U
  |        ---- expected due to this
  |
 --> ${TEST_FOLDER}/packages/erroneous-library/library.lushui:8:15
  |
8 | Clash: Type = Set.type U
  |               ^^^^^^^^^^ has the wrong type
  |
 note: expected type `Type`
        but got type `topmost.Set`

error: aborting due to previous error
 note: the error E032 has a detailed explanation
 help: run `lushui explain E032` to view it

